remove unnecessary long_desc and categories from article
