# docs/front_swagger.yaml
@@ -15,12 +15,10 @@ definitions:
       title:
         type: string
     type: object
-  pubsub.Article:
+  model.Article:
     properties:
-      categories:
-        items:
-          type: string
-        type: array
+      desc:
+        type: string
       id:
         type: string
       image:
@@ -32,8 +30,6 @@ definitions:
       pub_date:
         type: string
       pub_diff:
-        type: string
-      short_desc:
         type: string
       site_id:
         type: string
@@ -94,7 +90,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/pubsub.Article'
+              $ref: '#/definitions/model.Article'
             type: array
         "400":
           description: Bad Request
