# internal/entity/article.go
@@ -31,19 +31,17 @@ type Media struct {
 }
 
 type Article struct {
-	ID         uuid.UUID `json:"id,omitempty" bson:"_id,omitempty"`
-	Link       string    `json:"link,omitempty" bson:"link,omitempty"`
-	SiteID     uuid.UUID `json:"site_id,omitempty" bson:"site_id,omitempty"`
-	Source     Source    `json:"source,omitempty" bson:"source,omitempty"`
-	Lang       string    `json:"lang,omitempty" bson:"lang,omitempty"`
-	Title      string    `json:"title,omitempty" bson:"title,omitempty"`
-	ShortDesc  *string   `json:"short_desc,omitempty" bson:"short_desc,omitempty"`
-	LongDesc   *string   `json:"long_desc,omitempty" bson:"long_desc,omitempty"`
-	Media      *[]Media  `json:"media,omitempty" bson:"media,omitempty"`
-	PubDate    time.Time `json:"pub_date,omitempty" bson:"pub_date,omitempty"`
-	CreatedAt  time.Time `json:"created_at,omitempty" bson:"created_at,omitempty"`
-	UpdatedAt  time.Time `json:"updated_at,omitempty" bson:"updated_at,omitempty"`
-	Categories *[]string `json:"categories,omitempty" bson:"categories,omitempty"`
+	ID        uuid.UUID `json:"id,omitempty" bson:"_id,omitempty"`
+	Link      string    `json:"link,omitempty" bson:"link,omitempty"`
+	SiteID    uuid.UUID `json:"site_id,omitempty" bson:"site_id,omitempty"`
+	Source    Source    `json:"source,omitempty" bson:"source,omitempty"`
+	Lang      string    `json:"lang,omitempty" bson:"lang,omitempty"`
+	Title     string    `json:"title,omitempty" bson:"title,omitempty"`
+	Desc      *string   `json:"desc,omitempty" bson:"short_desc,omitempty"`
+	Media     *[]Media  `json:"media,omitempty" bson:"media,omitempty"`
+	PubDate   time.Time `json:"pub_date,omitempty" bson:"pub_date,omitempty"`
+	CreatedAt time.Time `json:"created_at,omitempty" bson:"created_at,omitempty"`
+	UpdatedAt time.Time `json:"updated_at,omitempty" bson:"updated_at,omitempty"`
 }
 
 func (e *Article) Tags() []string {
@@ -58,18 +56,8 @@ func (e *Article) Domain() string {
 	return util.SafeDomain(e.Link)
 }
 
-func (e *Article) SetShortDesc(shortDesc string) *Article {
-	e.ShortDesc = &shortDesc
-	return e
-}
-
-func (e *Article) SetLongDesc(longDesc string) *Article {
-	e.LongDesc = &longDesc
-	return e
-}
-
-func (e *Article) SetCategories(categories []string) *Article {
-	e.Categories = &categories
+func (e *Article) SetDesc(desc string) *Article {
+	e.Desc = &desc
 	return e
 }
 
